Fix: Updated entity type parsing to be more consistent with Go implementation, particularly for handling edge cases and default behaviors.